Fix alignment, add icon

--- a/css/towtext.scss
+++ b/css/towtext.scss
@@ -29,7 +29,7 @@ h1 {
 h2 {
     font-weight: normal;
     color: $charcoal;
-    line-height: 1.2em;
+    //line-height: 1.2em;
     padding-bottom: 1em;
 }
 
